# pagemd

./: .gitignore  Cargo.toml  DESIGN.md  README.md  brosion.json  build.rs  esbuild.config.mjs  makefile  mise.toml  package-lock.json  package.json
assets/: diagram-lightbox.js  footnotes.js  mermaid-init.js  preview.js  workspace.js
assets/typst-packages/: README.md  manifest.toml
examples/: BASIC.md
extension/: README.md
extension/chrome/: esbuild.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
extension/chrome/scripts/: build.mjs
extension/chrome/src/background/: background.ts
extension/chrome/src/content/: content.ts
extension/chrome/src/lib/: hook-executor.ts  pagemd-script.ts  pipeline.ts  prompt.ts  recipe.ts  settings.ts
extension/chrome/src/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.ts
extension/chrome/src/styles/: globals.css
extension/chrome/wasm/: Cargo.toml
extension/chrome/wasm/src/: lib.rs
manifests/chrome/: manifest.json
scripts/: dist.sh
src/: lib.rs  main.rs  tests.rs  wasm.ts
src/app/: cli.rs  convert.rs  mod.rs
src/app/browser/: chrome.rs  cli.rs  export.rs  mcp_cli.rs  mod.rs  pretty.rs  provider_detect.rs  runtime.rs  sandbox.rs  script.rs  session_md.rs  session_preview.rs  snap.rs  tools.rs  undo.rs  workspace.rs
src/app/browser/bridge/: mod.rs
src/app/browser/cdp/: client.rs  mod.rs  targets.rs
src/app/browser/mcp/: bridge_client.rs  mod.rs  server.rs
src/app/browser/repl/: mod.rs
src/app/preview/: error.rs  live.rs  mod.rs  resources.rs  server.rs
src/core/: authoring.rs  mod.rs  pipeline.rs
src/core/export/: mod.rs
src/core/export/html/: bundler.rs  favicon.rs  footnotes.rs  lightbox.rs  mod.rs  nav_tree.rs  page.rs  styles.rs  workspace.rs
src/core/ext/: math.rs  mod.rs
src/core/ext/diagram/: html.rs  mermaid.rs  mod.rs  plantuml.rs
src/core/ext/typst/: embed.rs  mod.rs  package.rs
src/core/import/: mod.rs
src/core/md/: callouts.rs  footnotes.rs  mod.rs  preprocess.rs  render.rs
src/core/model/: mod.rs
src/core/util/: exclude.rs  mod.rs
src/lib/: dom-summary.ts  hook-executor.ts  pipeline.ts  prompt.ts  recipe.ts  settings.ts  types.ts
src/offscreen/: offscreen.html  offscreen.ts
src/options/: options.css  options.html  options.ts
src/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.ts
src/typst/: embed.rs  mod.rs  package.rs
src/view/: live.rs  mod.rs  resources.rs  server.rs
tests/: integration.rs
tools/pagemd/: Cargo.toml  build.rs
tools/pagemd/src/: main.rs
