[package]
name = "pagemd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pagemd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
pulldown-cmark = { version = "0.13", features = [] }
syntect = "5.3"
base64 = "0.22"
mermaid-rs-renderer = { version = "0.2.2", default-features = false }
plantuml_encoding = "2.0.3"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ratex-svg = { version = "0.0.15", features = ["standalone", "cli"] }
ratex-parser = "0.0.15"
ratex-layout = "0.0.15"
ratex-types = "0.0.15"
ratex-font = "0.0.15"
anyhow = "1"
ratex-katex-fonts = "0.1.8"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
notify = "8"
notify-debouncer-mini = "0.6"
async-stream = "0.3"
futures = "0.3"
