[package]
name = "pagemd"
version = "0.7.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "pagemd"
path = "src/main.rs"

[build-dependencies]
anyhow = "1"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tar = "0.4"
toml = "0.8"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
pulldown-cmark = { version = "0.13", features = [] }
syntect = "5.3"
base64 = "0.22"
merman = { version = "0.8.0-alpha.3", features = ["render"] }
plantuml_encoding = "2.0.3"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ratex-svg = { version = "0.0.15", features = ["standalone", "cli"] }
ratex-parser = "0.0.15"
ratex-layout = "0.0.15"
ratex-types = "0.0.15"
ratex-font = "0.0.15"
anyhow = "1"
ratex-katex-fonts = "0.1.8"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "io-util", "sync"] }
notify = "8"
notify-debouncer-mini = "0.6"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.26"
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5"] }
rustyline = "15"
htmd = "0.1"
which = "7"
typst-as-lib = { version = "0.15.4", features = ["typst-kit-fonts", "typst-kit-embed-fonts", "packages", "reqwest"] }
typst-svg = "0.14"
typst = "0.14"
flate2 = "1"
tar = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"
rust-embed = "8"
# pagemd does not use time directly; it is a transitive dep of typst-library / syntect.
# time 0.3.47 conflicts with typst-library 0.14 blanket From impls (E0119),
# so pin the version until typst fixes it; remove this line once resolved.
time = "=0.3.46"
